fixed spacing for video title

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ background-color: #45E7AB;
 }
 
 .video-title label{
-  padding-top: 8px;
+  padding-top: 4px;
   padding-left: 10px
 }
 
